# dmsx

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/rules/: docs-update-required.mdc
.github/workflows/: ci.yml
android-agent/: README.md  gradle.properties  settings.gradle
android-agent/app/: build.gradle
android-agent/app/src/main/: AndroidManifest.xml
android-agent/app/src/main/java/com/dmsx/agent/: AgentConfig.java  AgentService.java  ApiClient.java  BootReceiver.java  MainActivity.java  Telemetry.java
android-agent/app/src/main/res/drawable/: ic_agent.xml
android-agent/app/src/main/res/values/: strings.xml  styles.xml
crates/dmsx-agent/: Cargo.toml
crates/dmsx-agent/src/: api.rs  app.rs  command_runner.rs  config.rs  desktop.rs  device.rs  install_update.rs  lib.rs  main.rs  rustdesk.rs  script.rs  telemetry.rs  windows_service.rs
crates/dmsx-agent/src/desktop/: capture.rs  input.rs  session.rs
crates/dmsx-agent/src/platform/: mod.rs
crates/dmsx-ai/: Cargo.toml
crates/dmsx-ai/src/: anomaly.rs  assistant.rs  engine.rs  lib.rs  prediction.rs  recommendation.rs  types.rs
crates/dmsx-api/: Cargo.toml
crates/dmsx-api/src/: app.rs  auth.rs  auth_tokens.rs  command_jetstream.rs  db.rs  db_rls.rs  desktop.rs  desktop_helpers.rs  dto.rs  error.rs  handlers.rs  helpers.rs  lib.rs  limits.rs  main.rs  metrics.rs  migrate_embedded.rs  query_types.rs  result_jetstream_ingest.rs  state.rs  telemetry.rs  tenant_rbac.rs
crates/dmsx-api/src/repo/: artifacts.rs  audit.rs  commands.rs  compliance.rs  control_accounts.rs  device_enrollment_batches.rs  devices.rs  groups.rs  mod.rs  orgs.rs  platform.rs  policies.rs  shadow.rs  sites.rs  stats.rs  system_settings.rs  tenants.rs
crates/dmsx-api/src/services/: artifacts.rs  audit.rs  authn.rs  bootstrap.rs  commands.rs  compliance.rs  devices.rs  hierarchy.rs  mod.rs  platform.rs  policies.rs  shadow.rs  stats.rs  system_settings.rs  tenant_rbac.rs
crates/dmsx-api/tests/: rls_tenant_session.rs
crates/dmsx-core/: Cargo.toml
crates/dmsx-core/src/: domain.rs  error.rs  lib.rs
crates/dmsx-device-gw/: Cargo.toml  build.rs
crates/dmsx-device-gw/src/: client_identity.rs  command_stream.rs  enroll.rs  enroll_token.rs  evidence_store.rs  main.rs  metrics_http.rs  rate_limit.rs  result_publish.rs  telemetry.rs  upload_token.rs
deploy/: Dockerfile.api  Dockerfile.device-gw  docker-compose.yml  livekit.yaml  otel-collector-config.yaml
deploy/kubernetes/: dmsx-api-ingress.yaml  dmsx-api-networkpolicy.yaml  dmsx-api-secrets.example.yaml  dmsx-api.yaml  dmsx-configmap.example.yaml  dmsx-device-gw.yaml  dmsx-hpa.yaml  dmsx-pdb.yaml  dmsx-rbac.yaml  namespace-dmsx.yaml
deploy/kubernetes/monitoring/: dmsx-api-grafana-dashboard.yaml  dmsx-api-prometheusrule.yaml  dmsx-api-servicemonitor.yaml
docs/: AI_DESIGN.md  ANDROID_DEPLOY.md  API.md  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  DOMAIN_MODEL.md  ENGINEERING_STANDARDS.md  FRONTEND.md  INTERNAL_BETA_SCOPE_AND_FEEDBACK.md  IOT_PLATFORM_BEST_PRACTICES.md  POSTGRES_TENANT_PARTITIONING_PLAN.md  PR_REVIEW_CHECKLIST.md  SCALING_AND_ROADMAP.md  SECURITY.md  WINDOWS_AGENT.md
docs/plans/: 2026-04-30-management-console-v2-redesign.md
migrations/: 001_init.sql  002_seed.sql  003_shadow_and_results.sql  004_second_tenant_seed.sql  005_rls_tenant_isolation.sql  006_commands_hash_partition.sql  007_system_settings.sql  008_devices_registration_code.sql  009_device_enrollment_batches.sql  010_control_accounts.sql  011_tenant_integrity_hardening.sql
migrations/ch/: 001_init.sql
openapi/: dmsx-control-plane.yaml
proto/dmsx/: agent.proto
scripts/: agent-dev-e2e.sh  install-windows-agent.ps1  internal-beta-data-plane-e2e.sh  internal-beta-data-plane-enroll.sh  internal-beta-dod.sh  internal-beta-smoke-http.sh  internal-beta-verify.sh  oidc-jwks-prod-smoke.sh  package-android-agent.ps1  package-windows-agent.ps1  public-beta-multi-tenant-smoke.sh  reproduce-dev-env.sh  run-windows-agent-dev.ps1  uninstall-windows-agent.ps1
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  antdReact19Compat.ts  appProviders.tsx  artifactMeta.ts  authz.ts  enrollmentInstall.ts  main.tsx  navigation.tsx  router.tsx
web/src/api/: client.ts  errors.ts  hooks.ts  types.ts
web/src/components/: AccessGate.tsx  AppDeferredTools.tsx  CommandDetail.tsx  DeviceDetail.tsx  GuardedButton.tsx  PolicyDetail.tsx  ReadonlyBanner.tsx  RemoteControl.tsx  RemoteDesktop.tsx  ShadowPanel.tsx  TerminalBlock.tsx
web/src/pages/: AiCenter.tsx  Artifacts.tsx  AuditLogs.tsx  Commands.tsx  Compliance.tsx  Dashboard.tsx  Devices.tsx  Login.tsx  Network.tsx  PlatformAuditLogs.tsx  PlatformHealth.tsx  PlatformOverview.tsx  PlatformPermissionMenus.tsx  PlatformPermissionPolicy.tsx  PlatformPermissionRoles.tsx  PlatformPermissionUsers.tsx  PlatformPermissions.tsx  PlatformQuotas.tsx  PlatformTenants.tsx  Policies.tsx  PolicyEditor.tsx  SystemSettings.tsx  UsersRoles.tsx  ZeroTouchEnroll.tsx
