[package]
name = "dmsx-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dmsx-core = { path = "../dmsx-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
