[package]
name = "dmsx-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dmsx-api"
path = "src/main.rs"

[dependencies]
dmsx-core = { path = "../dmsx-core", features = ["axum", "sqlx"] }
dmsx-ai = { path = "../dmsx-ai" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tower.workspace = true
tower-http.workspace = true
tower_governor = "0.6"
governor = "0.8"
livekit-api = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.26"
jsonwebtoken = "10"
reqwest = "0.12"
prometheus-client = "0.22"
once_cell = "1.21"
prometheus-client-derive-encode = "0.4"
redis = { version = "1.2.0", features = ["aio", "tokio-comp"] }
async-nats = "0.47.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
sqlx.workspace = true
tokio.workspace = true
