[package]
name = "dmsx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum", "dep:http"]
sqlx = ["dep:sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
axum = { workspace = true, optional = true }
http = { version = "1", optional = true }
sqlx = { workspace = true, optional = true }
