[package]
name = "dmsx-device-gw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DMSX 数据面 DeviceGateway gRPC skeleton"

[[bin]]
name = "dmsx-device-gw"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

[build-dependencies]
tonic-build.workspace = true
