[package]
name = "dmsx-device-gw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DMSX 数据面 DeviceGateway gRPC skeleton"

[[bin]]
name = "dmsx-device-gw"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-stream = "0.1"
tonic = { workspace = true, features = ["tls"] }
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
async-nats = "0.47.0"
dmsx-core = { version = "0.1.0", path = "../dmsx-core" }
futures-util = { version = "0.3", default-features = false }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
x509-parser = "0.16"

[build-dependencies]
tonic-build.workspace = true
